# exercise_devoteam

./: .editorconfig  .gitignore  README.md  apikey.json  docker-compose.yml  how_to  how_to.txt  pyproject.toml
exercise_devoteam/: Dockerfile  database.db  how_to.txt  pyproject.toml  requirements.txt
exercise_devoteam/src/: database.db  main.py
exercise_devoteam/src/connectors/: commentsConnector.py  episodesConnector.py
exercise_devoteam/src/model/: Comment.py
exercise_devoteam/src/repository/: commentRepository.py  episodesRepository.py
exercise_devoteam/src/services/: commentService.py  episodeService.py
exercise_devoteam/tests/: database.db  test_episodes_controller.py
next_app/: Dockerfile  dead  next.config.js  package-lock.json  package.json
next_app/app/: globals.css  layout.js  page.js
next_app/app/episodes/: episode.js  page.js
next_app/app/episodes/[imdb_id]/: page.js
next_app/app/episodes/[imdb_id]/comments/: delete.js  page.js
next_app/app/episodes/[imdb_id]/comments/[comment_id]/: page.js
next_app/app/episodes/[imdb_id]/comments/new/: page.js
next_app/app/episodes/filter/: page.js
next_app/app/episodes/filter/[season]/: page.js
next_app/comps/: Navbar.js
next_app/utils/: url.js
src/: database.db  db_context.py  main.py
src/connectors/: episodesConnectors.py
src/model/: Episode.py
src/repository/: commentRepository.py  db_context.py  episodesRepository.py
src/services/: commentService.py  episodeService.py  omdb_service.py
src/utils/: mapper.py
tests/: database.db  test_episodes_controller.py
